--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: working_title
 author: Deniz
 name: Deniz
-email: deniztoma512@gmail.com
 
-description: >
+description:
   Hi. Some stuff about me and my projects.
 
 excerpt_separator: <!--more-->
@@ -20,16 +19,14 @@ paginate_path:       "blog/page:num"
 
 baseurl: ""
 url: ""
-twitter:
-  username: sos
-  creator: sos
 
-social:
-  name: Deniz
-  links:
-    - https://twitter.com/sos
-    - https://www.linkedin.com/in/
-    - https://github.com/IronicUsername
+social-network-links:
+  github: IronicUsername
+  twitter: sos
+  email: "deniztoma512@gmail.com"
+  linkedin: maxmuster
+  instagram: max.muster
+  spotify: max.muster
 
 sass:
   style: compressed
